--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,11 @@
          <version>4.0</version>
          <scope>test</scope>
       </dependency>
+	<dependency>
+		<groupId>org.jocl</groupId>
+		<artifactId>jocl</artifactId>
+		<version>0.1.9</version>
+	</dependency>
   </dependencies>
   <build>
     <plugins>
