--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
 		<artifactId>jocl</artifactId>
 		<version>0.1.9</version>
 	</dependency>
+	<dependency>
+		<groupId>nz.ac.waikato.cms.weka</groupId>
+		<artifactId>weka-stable</artifactId>
+		<version>3.6.6</version>
+	</dependency>
+
   </dependencies>
   <build>
     <plugins>
